- noch ein paar unnoetige Leerzeichen entfernt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1350 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/carl-ana1/skript.tex
+++ b/carl-ana1/skript.tex
@@ -1411,7 +1411,7 @@ Sei $(a_n) \subset \R$ beschränkt. Dann ist $\overline{\lim} a_n$ grösster
   \item Zu zeigen: $a=\overline{\lim}\ a_n$ ist Häufungspunkt von $(a_n)$\\
     Setzen $b_n\coloneqq\sup \{a_k\colon k\geq n\}$ ist monoton fallend und nach unten beschränkt. Daraus folgt nach
     \autoref{satz:monotoneFolge}: $a=\lim b_n=\inf \{b_n\}=\overline{\lim}\ a_n$\\
-    Für $k \in \N \ \exists m_k \in \N \colon a\leq b_{m_k}<a+\frac{1}{k}\Rightarrow \exists n_k\geq m_k\colon b_{m_k}-\frac{1}{k}
+    Für $k \in \N \exists m_k \in \N \colon a\leq b_{m_k}<a+\frac{1}{k}\Rightarrow \exists n_k\geq m_k\colon b_{m_k}-\frac{1}{k}
     <a_{n_k}\leq b_{m_k}$\\
     $\Rightarrow a-\frac{1}{k}\leq b_{m_k}-\frac{1}{k}<a_{n_k}<a+\frac{1}{k}$\\
     $\Rightarrow a-\frac{1}{k}<a_{n_k}<a+\frac{1}{k}$\\
@@ -1462,7 +1462,7 @@ ist genau dann konvergent, wenn sie eine Cauchyfolge ist.
       & \text{ für } n,m\geq n_1
     \end{align*}
     Für $M=\max\{|a_1|,|a_2|,\ldots, |a_m|, 1+|a_m|\}$ gilt $|a_n|\leq
-    M\, \forall n \in \N$. Nach dem Satz von Bolzano/Weierstrass
+    M \forall n \in \N$. Nach dem Satz von Bolzano/Weierstrass
     (\autoref{satz:bw}) gilt: $\exists$ Teilfolge $(a_{n_k})\subset
     (a_n)\colon a_{n_k}$ ist konvergent mit $a\coloneqq\lim_{k\rightarrow \infty}
     a_{n_k}$.\\
@@ -2267,7 +2267,7 @@ Sei $D\subset X, f\colon D\rightarrow Y$. $f$ heißt genau dann
 \[\forall \varepsilon >0 \exists \delta_{\varepsilon}>0 \forall x,y \in D\colon d(x,y)<\delta_{\varepsilon}
 \Rightarrow \tilde{d} (f(x),f(y))<\varepsilon\]
 \end{definition}
-Bemerkung: $f$ ist stetig auf $D \perdef \forall x\in D \forall \varepsilon >0 \ \exists \delta_{\varepsilon}
+Bemerkung: $f$ ist stetig auf $D \perdef \forall x\in D \forall \varepsilon >0 \exists \delta_{\varepsilon}
 (x)>0 \forall y\in D\colon d(x,y)<\delta_{\varepsilon}(x)\Rightarrow \tilde{d}(f(x),f(y))<\varepsilon$\\
 Offenbar gilt: $f$ ist gleichmässig stetig auf $D\Rightarrow f$ stetig auf $D$. Die Umkehrung gilt im allgemeinen
 nicht.\\
@@ -2482,7 +2482,7 @@ Dann gilt:
     & \leq \frac{\alpha^m}{1-\alpha}d(x_1,x_0)
     \end{align*}
     Also hat man $d(x_n,x_m)\leq \frac{\alpha^m}{1-\alpha}d(x_1,x_0)$ für $n>m$. Aus der Tatsache, dass $\alpha$
-    zwischen 0 und 1 liegt, folgt $\forall \varepsilon >0 \exists n_{\varepsilon}\in \N \ \forall n,m\geq
+    zwischen 0 und 1 liegt, folgt $\forall \varepsilon >0 \exists n_{\varepsilon}\in \N \forall n,m\geq
     n_{\varepsilon} \colon d(x_n,x_m)\leq \varepsilon$. Daher folgt weiter, dass $(x_n)$ eine Cauchyfolge ist. Weiterhin
     ist bekannt, dass $X$ vollständig ist. Dies bedingt, dass ein $a\in X$ existiert, für das $\lim x_n=a$ ist. Wegen
     der Dreiecksungleichung $|d(a,x_m)-d(x_m,x_n)|\leq d(a,x_n)$ ergibt sich für $n\rightarrow \infty$, dass
@@ -2532,9 +2532,9 @@ Sei $D\subset \R , f\colon D\rightarrow \R$ eine reelle Funktion, $a\in\R$ ist H
     den \emph{rechtsseitigen Grenzwert\index{Grenzwert!rechtsseitig}}.
   \item $\lim_{x\rightarrow a-0}f(x)=c\perdef \forall (x_n)\subset D\ x_n<a,x_n\rightarrow a\Rightarrow f(x_n)=c$ $f$ hat in $c$
     den \emph{linksseitigen Grenzwert\index{Grenzwert!linksseitig}}.
-  \item $\lim_{x\rightarrow a+0}f(x)=f(a)\perdef \forall \varepsilon >0\ \exists \delta >0 \ \forall x \in D\colon 0\leq x-a<\delta
+  \item $\lim_{x\rightarrow a+0}f(x)=f(a)\perdef \forall \varepsilon >0\ \exists \delta >0 \forall x \in D\colon 0\leq x-a<\delta
     \Rightarrow |f(x)-f(a)|<\varepsilon$ $f$ ist \emph{linksseitig stetig\index{Stetigkeit!linksseitig}}.
-  \item $\lim_{x\rightarrow a-0}f(x)=f(a)\perdef \forall \varepsilon >0\ \exists \delta >0 \ \forall x \in D\colon 0\leq a-x<\delta
+  \item $\lim_{x\rightarrow a-0}f(x)=f(a)\perdef \forall \varepsilon >0\ \exists \delta >0 \forall x \in D\colon 0\leq a-x<\delta
     \Rightarrow |f(x)-f(a)|<\varepsilon$ $f$ ist \emph{rechtsseitig stetig\index{Stetigkeit!rechtsseitig}}.
   \item $\lim_{x\rightarrow\infty} f(x)=c\perdef \forall (x_n)\subset D (x_n \rightarrow \infty \Rightarrow f(x_n)\rightarrow c)$
   \item $\lim_{x\rightarrow a} f(x)=\infty\perdef \forall (x_n)\subset D\\\{a\} (x_n \rightarrow a \Rightarrow f(x_n)\rightarrow \infty)$
@@ -2542,7 +2542,7 @@ Sei $D\subset \R , f\colon D\rightarrow \R$ eine reelle Funktion, $a\in\R$ ist H
 
 \subsection{Polynome und rationale Funktionen}
 
-Eine Funktion $P\colon\R\rightarrow \R$ mit $P(x)=a_0x^k+a_1x^{k-1}+\cdots + a_{k-1}x+a_k \ (a_0\neq 0, k=0,1,2,\ldots)$ heißt
+Eine Funktion $P\colon\R\rightarrow \R$ mit $P(x)=a_0x^k+a_1x^{k-1}+\cdots + a_{k-1}x+a_k (a_0\neq 0, k=0,1,2,\ldots)$ heißt
 \emph{Polynom\index{Polynom}} k-ten Grades.
 
 Eine Funktion $R(x)=\frac{P(x)}{Q(x)}$ mit $P,Q$ Polynomen heißt \emph{rationale Funktion\index{Funktion!rationale}}.
