Kommentare zur Hölderschen und Minkowskischen Ungleichung
git-svn-id: https://svn.lug-jena.de/uni-skripte@1363 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -1757,11 +1757,16 @@ allgemein die Räume~$l_{p}$ einführen und ihre Eigenschaften untersuchen.
   Eigenschaften $1 \leq p \leq \infty$ und $\frac{1}{p} + \frac{1}{p'} = 1$,
   wobei $p'=\infty$ falls $p=1$ ist und umgekehrt, gilt die \highl[Hölder'sche
   Ungleichung!für Summen]{Hölder'sche Ungleichung für Summen}
+  \help{Ist es so geschickt, wenn $a$ und $b$ Vektoren sind? Sollten es
+    vielleicht besser Folgen sein? Für die ist die Multiplikation bereits
+    gliedweise definiert.}
   \begin{gather}\label{eq:hoelder-sum}
     \abs[\big]{\sum_{k=1}^{n}a_{k} b_{k}}
        \leq \Bigl(\sum_{k=1}^{n} \abs{a_{k}}^{p}\Bigr)^{\frac{1}{p}}
        \cdot \Bigl(\sum_{k=1}^{n}\abs{b_{k}}^{p'}\Bigr)^{\frac{1}{p'}}
   \end{gather}
+  \help{Könnten wir das nicht gleich für $n=\infty$ zeigen? Dann hätten wir
+    nämlich $\norm{ab}_{1}\leq\norm{a}_{p}+\norm{b}_{q}$.}
 
   \begin{proof}
     Betrachten wir zuerst den Fall, dass $p=\infty$ oder $p'=\infty$. Es sei
@@ -1799,11 +1804,16 @@ allgemein die Räume~$l_{p}$ einführen und ihre Eigenschaften untersuchen.
 \begin{lemma}[Minkowski'sche Ungleichung]\label{lem:minkowski}
   Für zwei Zahlen~$a,b\in\K^{n}$ und eine reelle Zahl~$p$ mit $1 \leq p <
   \infty$ gilt die \highl{Minkowski'sche Ungleichung}:
+  \help{Ist es so geschickt, wenn $a$ und $b$ Vektoren sind? Sollten es
+    vielleicht besser Folgen sein? Für die ist die Addition bereits gliedweise
+    definiert.}
   \begin{gather*}
     \Big(\sum_{k=1}^{n}\abs{a_{k}+b_{k}}^{p}\Big)^{\frac1p}
        \leq \Big(\sum_{k=1}^{n}\abs{a_{k}}^{p}\Big)^{\frac{1}{p}}
        + \Big(\sum_{k=1}^{n} \abs{b_{k}}^{p}\Big)^{\frac{1}{p}}
   \end{gather*}
+  \help{Könnten wir das nicht gleich für $n=\infty$ zeigen? Dann hätten wir
+    nämlich $\norm{a+b}_{p}\leq\norm{a}_{p}+\norm{b}_{p}$.}
 
   \begin{proof}
     Der Fall $p=1$ ist die bekannte Dreiecksungleichung. Also sei $p>1$. Die
