Überarbeitung der Definition von gleichgradig stetig
git-svn-id: https://svn.lug-jena.de/uni-skripte@1370 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -2157,14 +2157,17 @@ Raum~$(X,d)$ ein metrischer Raum und $(E,\norm{\cdot}_{E})$ eine Banachraum.
 \end{defini}
 
 \begin{defini}
-  $(X,d)$ kompakt, metr. Raum $E=\R,\C$
-
-  $A\subset C(X,E)$ heißt \highl{gleichgradig} (gleichmäßig) stetig
-  $:\Longleftrightarrow$
+  Für einen kompakten, metrischen Raum $(X,d)$ bezeichnet man die Teilmenge
+  $A\subset C(X,\K)$ \gdwdef{\highl[gleichgradig stetig]{gleichgradig
+  (gleichmäßig) stetig}} alle Funktionen~$f\in A$ stetig sind und dabei
+  $\delta$ unabhängig von den Punkten und von der Funktion ist.
   \begin{gather*}
-    \forall \epsilon>0 \exists\delta>0 \forall x,x'\in X\colon
-       d(x,x')<\delta \colon \sup_{f\in A}\abs{f(x)-f(x')}<\epsilon
+    \forall \epsilon>0 ~\exists\delta(\epsilon)>0 ~\forall x,x'\in X \text{~mit~}
+       d(x,x')<\delta(\epsilon) \colon \sup_{f\in A}\abs{f(x)-f(x')}<\epsilon
   \end{gather*}
+  \help{Was ist der Unterschied zur gleichmäßigen Stetigkeit? Ist gleichgradig
+    die Erweiterung von gleichmäß auf eine Menge, also $A$ gleichgradig stetig
+    \gdw{} $\forall f\in A$ sind gleichmäßig stetig mit dem selben $\delta$?}
 \end{defini}
 
 \begin{satz}[Arzela-Ascoli]\label{satz:arzela}
