Ein \help im Abschnitt 1.1.1 sichtbar machen
Das wurde wahrscheinlich nach dem Test wie der Abschnitt ohne das \help
später aussieht, nicht wieder eingebaut.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1372 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -681,7 +681,7 @@ komplexer Vektorraum genannt wird~-- gelten folgende Definitionen:
 
     Damit wir nicht mit dem Limes und der unendlichen Summation in Konflikt
     kommen, betrachten wir die $N$.~Partialsumme aus \autoref{eq:1}.
-    % \help{Stimmt das oder warum nehmen wir auf einmal die Partialsumme?}
+    \help{Stimmt das oder warum nehmen wir auf einmal die Partialsumme?}
     Für $j,k\geq j_{0}(\epsilon)$ und $N\in\N$ ist
     \begin{gather*}
       \sum_{n=1}^{N}\abs{a_{n}^{j}-a_{n}^{k}}\leq \epsilon
