Defintion spezieller C() überarbeiten, neue Folgerung daraus
Die Folgerung lag so auf der Hand, dass ich sie einfach mit erwähnen
wollte.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1375 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -2143,21 +2143,21 @@ Raum~$(X,d)$ ein metrischer Raum und $(E,\norm{\cdot}_{E})$ eine Banachraum.
 Wenn wir im Folgenden von einem \highl{Gebiet} sprechen, so ist damit eine
 Teilmenge des $\R^{n}$ gemeint.
 
-\begin{defini}
+\begin{defini}\label{def:offene-beschr-Gebiete}
   \begin{enumerate}
-   \item $\Omega \subset\R^{n}$ offen, beschränkt, $E=\R,\C$
-    \begin{gather*}
-      C(\Omega) := C(\Omega, E)\\
-      C(\overline{\Omega}) := U\subset B(\overline{\Omega}, E)
-    \end{gather*}
-   \item $\Omega \subset \R^{n}$ offen (nicht notwendig beschränkt)
-    \begin{gather*}
-      \overline{C}(\Omega) := U\subset B(\Omega, E)
-    \end{gather*}
+   \item Es sei $\Omega \subset\R^{n}$ ein offenes und beschränktes Gebiet und
+    $E=\K$. Dann ist gelten die beiden Kurzschreibweisen:
+    \highl{$C(\Omega)$}${}:= C(\Omega, E)$ und
+    \highl{$C(\overline{\Omega})$}${}:= U(\overline{\Omega},E)$.
 
+   \item Für ein offenes, aber nicht notwendiger Weise beschränktes Gebiet
+    $\Omega \subset \R^{n}$ gilt die Kurzschreibweise
+    \highl{$\overline{C}(\Omega)$}${}:= U(\Omega, E)$.
   \end{enumerate}
-  Also: $(\overline{C}(\Omega), \norm{\cdot}_{\infty})$ Banachräume
 \end{defini}
+
+Also ist nach \autoref{satz:U-Banachraum} $(\overline{C}(\Omega),
+\norm{\cdot}_{\infty})$ ein Banachraum.
 
 \begin{defini}
   Für einen kompakten, metrischen Raum $(X,d)$ bezeichnet man die Teilmenge
