Die zwei Lemmata für den Satz von Stone‐Weierstraß
git-svn-id: https://svn.lug-jena.de/uni-skripte@1377 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -2365,77 +2365,114 @@ Also ist nach \autoref{satz:U-Banachraum} $(\overline{C}(\Omega),
 \end{defini}
 
 \begin{lemma}\label{lemma:1}
-  Es existieren Polynome $(p_{n}(t))_{n}$, so dass
+  Es existiert eine Folge~$(p_{n})_{n}\subset\Polyn$ von Polynomen, mit der
+  man jeden Punkt in der Einheitskugel beliebig gut approximieren kann.
   \begin{gather*}
     \sup_{\abs{t}\leq1} \abs[\big]{p_{n}(t)-\abs{t}} \xrightarrow{n\rightarrow\infty} 0
   \end{gather*}
 
   \begin{proof}
-    setzen $p_{0}(t) := 0, p_{n+1}(t) = p_{n}(t) + \frac12
-    (t^{2}-(p_{n}(t))^{2}), n\in \N_{0}$
-
-    Es gilt:
+    Wir setzen $p_{0}(t):=0$ und für alle $n\in \N_{0}$
     \begin{gather*}
-      \abs{t} - p_{n+1}(t) = (\abs{t}-p_{n}(t)) ( 1- \frac{\abs{t}+p_{n}(t)}{2}
-         )\label{eq:11}\\
-      \intertext{Außerdem:} 0\leq p_{n}(t) \leq \abs{t} \text{(durch
-         Induktion)}\taglabel{eq:12}
+      p_{n+1}(t) := p_{n}(t) + \frac{t^{2}-\big(p_{n}(t)\big)^{2}}{2}
     \end{gather*}
-    \begin{align*}
-      p_{n}(t) \leq \abs{t} &\Longrightarrow \abs{t}+p_{n}(t) \leq 2\abs{t}\\
-      &\Longrightarrow 1-\frac{\abs{t}+p_{n}(t)}{2} \geq 1-\frac{2\abs{t}}{2} =
-         1-\abs{t} \geq 0\\
-      \text{nach \autoref{eq:11}}&\Longrightarrow \abs{t}-p_{n+1}(t) \geq 0
-    \end{align*}
 
-    und:
-    \begin{align*}
-      (2+(n+1)\abs{t})(1-\frac{\abs{t}+p_{n}(t)}{2}) &=
-         2+n\abs{t}+\abs{t}-(\abs{t}-\underbrace{p_{n}(t)}_{\geq0})-
-         \frac{(n+1)\abs{t}}{2}(\abs{t}+p_{n}(t))\\
-      &\leq 2 + n\abs{t}\\
-      \Longrightarrow& (1-\frac{\abs{t}+p_{n}(t)}{2}) \leq
-         \frac{2+n\abs{t}}{2+(n+1)\abs{t}}\label{eq:13}
-    \end{align*}
+    Mittels Induktion zeigen wir, dass $0\leq p_{n}(t) \leq \abs{t}$ gilt. Aus
+    der Definition kann man leicht die \autoref{eq:7.1} herleiten.
+    \begin{gather}
+      \label{eq:7.1}
+      \abs{t} - p_{n+1}(t)
+         = \big(\abs{t}-p_{n}(t)\big)
+         \Big(1- \frac{\abs{t}+p_{n}(t)}{2} \Big)
+    \end{gather}
 
-    Aus \autoref{eq:11} folgt mit \autoref{eq:13} durch Induktion:
-    \begin{align}\label{eq:14}
-     \begin{split}
-        \abs{t}-p_{n+1}(t) &\leq (\abs{t}-p_{n}(t)) \frac{2+n\abs{t}}{2+(n+1)\abs{t}}\\
-        & \leq (\abs{t}-p_{n-1}(t))\frac{2+(n+1)\abs{t}}{2+n\abs{t}}
-        \frac{2+n\abs{t}}{2+(n+1)\abs{t}}\\
-        &\vdots\\
-        &\leq (\abs{t}-p_{0}(t)) \frac{2}{2+(n+1)\abs{t}} = \frac{2\abs{t}}{2+(n+1)\abs{t}}
-     \end{split}
+    Nach Induktionsvoraussetzung sei also $p_{n}(t)\leq\abs{t}$ und es gilt
+    $\abs{t} + p_{n}(t) \leq 2\abs{t}$. Daraus folgt \autoref{eq:7.2} und mit
+    \autoref{eq:7.1} ergibt sich $\abs{t}-p_{n+1}(t) \geq 0$.
+    \begin{gather}
+      \label{eq:7.2}
+      1-\frac{\abs{t}+p_{n}(t)}{2} \geq 1-\frac{2\abs{t}}{2}
+         = 1-\abs{t} \geq 0
+    \end{gather}
+
+    Das $0\leq p_{n}(t)$ gilt, folgt jetzt leicht aus der Definition von
+    $p_{n+1}(t)$ durch Anwendung der dritten binomischen Formel für den Zähler.
+
+    Betrachten wir also noch die Konvergenz. Dafür benötigen wir zwei
+    Abschätzungen.
+    \begin{multline*}
+      \big(2+(n+1)\abs{t}\big) \Big(1-\frac{\abs{t}+p_{n}(t)}{2}\Big) =\\
+      2 + n\abs{t} + \abs{t} - \abs{t}
+      - \underbrace{p_{n}(t)}_{\geq0}
+         - \underbrace{(n+1)\abs{t}\frac{\abs{t}+p_{n}(t)}{2}}_{\geq0}
+      \leq 2 + n\abs{t}
+    \end{multline*}
+
+    Daraus ergibt sich die folgende Abschätzung, mit Hilfe derer wir durch die
+    wiederholte Anwendung von \autoref{eq:7.1} und der obigen Abschätzung die
+    \autoref{eq:7.4} gewinnen.
+    \begin{gather}
+      \label{eq:7.3}
+      1-\frac{\abs{t}+p_{n}(t)}{2}
+         \leq \frac{2+n\abs{t}}{2+(n+1)\abs{t}}
+    \end{gather}
+
+    \begin{align}
+      \notag
+      t - p_{n+1}(t)
+         &= \big(\abs{t}-p_{n}(t)\big)
+         \Big(1- \frac{\abs{t}+p_{n}(t)}{2} \Big)\\
+      \notag
+      &\leq \big(\abs{t}-p_{n}(t)\big) \frac{2+n\abs{t}}{2+(n+1)\abs{t}}\\
+      \notag
+      &= \big(\abs{t}-p_{n-1}(t)\big)
+         \Big(1- \frac{\abs{t}+p_{n-1}(t)}{2} \Big)
+         \frac{2+n\abs{t}}{2+(n+1)\abs{t}}\\
+      \notag
+      &\leq \big(\abs{t}-p_{n-1}(t)\big)
+         \frac{2+(n-1)\abs{t}}{2+n\abs{t}}
+         ~\frac{2+n\abs{t}}{2+(n+1)\abs{t}}\\
+      \notag
+      &\dotso\\
+      \label{eq:7.4}
+      &\leq \big(\abs{t}-p_{0}(t)\big) \frac{2+0\abs{t}}{2+(n+1)\abs{t}}
+         = \frac{2\abs{t}}{2+(n+1)\abs{t}}
     \end{align}
 
+    Aus dieser Abschätzung und mit der Eigenschaft $\abs{t}\leq1$ ergibt sich
+    nun die gewünschte Konvergenz:
     \begin{gather*}
-      \abs{t} \leq 1 \text{ und \autoref{eq:14}}  \Longrightarrow 0 \leq \abs{t}-p_{n}(t)
-         \leq \frac{2\abs{t}}{2+n\abs{t}} \leq \frac{2\abs{t}}{2\abs{t}+n\abs{t}} =
-         \frac{2}{2+n} \xrightarrow{n\rightarrow\infty} 0
+      0 \leq \abs{t}-p_{n+1}(t)
+         \leq \frac{2\abs{t}}{2+(n+1)\abs{t}}
+         \leq \frac{2\abs{t}}{2\abs{t}+(n+1)\abs{t}} =
+         \frac{2}{2+n+1} \xrightarrow{n\rightarrow\infty} 0
     \end{gather*}
   \end{proof}
 \end{lemma}
 
 \begin{lemma}\label{lemma:2}
-  Sei $A$ Unteralgebra von $C(X,\R)$.
-
-  Dann folgt aus $f\in A$ $\Longrightarrow$ $\abs{f}\in \overline{A}$
-  (\highl{Abschluss} von $A$).
+  Für jede Funktion~$f$ einer Unteralgebra $A$ von $C(X,\R)$ gehört die
+  Betragsfunktion~$\abs{f}$ zum Abschluss von $A$.
 
   \begin{proof}
-    setzen $t:=\frac{f(x)}{\norm{f}_{\infty}} (x\in X) \Longrightarrow
-    \abs{t}\leq 1$
+    Für $x\in X$ definieren wir $t:=f(x) \norm{f}_{\infty}^{-1}$. Da für alle
+    $x$ der Betrag $\abs{t}\leq 1$ ist, existiert nach \autoref{lemma:1} eine
+    Folge~$(p_{n})_{n}$ von Polynomen, so dass für alle $x\in X$ gilt:
+    \begin{align*}
+      \abs[\bigg]{p_{n}\Big(\frac{f(x)}{\norm{f}_{\infty}}\Big)
+         - \abs[\Big]{\frac{f(x)}{\norm{f}_{\infty}}}}
+         &\leq \frac{\epsilon}{\norm{f}_{\infty}}\\
+      \abs[\Big]{\underbrace{\norm{f}_{\infty}
+                   p_{n}\Big(\frac{f(x)}{\norm{f}_{\infty}}\Big)}_{\in A}
+         - \abs{f(x)}}
+         &\leq \epsilon
+    \end{align*}
 
-    \autoref{lemma:1} $\Longrightarrow$ $\exists p_{n}(t)$ mit
-    $\abs[\big]{p_{n}(t)-\abs{t}}\leq \frac{\epsilon}{\norm{f}_{\infty}} (\forall t)$
-
-    $\Longrightarrow \forall x\colon
-    \abs{\frac{f(x)}{\norm{f}_{\infty}}-p_{n}(\frac{f(x)}{\norm{f}_{\infty}})}\leq
-    \frac{\epsilon}{\norm{f}_{\infty}}$
-
-    $\Longrightarrow \abs{f(x)-\underbrace{\norm{f}_{\infty}
-    p_{n}(\frac{f(x)}{\norm{f}_{\infty}})}_{\in A}}\leq \epsilon$
+    Anhand der Definition der Folge~$(p_{n})_{n}$ im \autoref{lemma:1} kann
+    man mittels Induktion leicht prüfen, dass für $t\in A$ ebenfalls die
+    Funktionen~$p_{n}(t)$ zur Unteralgebra gehören. Da $\abs{f}$ also der
+    Grenzwert einer Folge in $A$ ist, muss $\abs{f}$ zum
+    Abschluss~$\overline{A}$ gehören.
   \end{proof}
 \end{lemma}
 
