Ein Label für den Satz über isometrisch isomorphe Banachteilräume
git-svn-id: https://svn.lug-jena.de/uni-skripte@1380 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -945,7 +945,7 @@ ein Teil"-raum und abgeschlossen ist.
   \highl[Isomorphismus!isometrisch]{isometrischer Isomorphismus}.
 \end{defini}
 
-\begin{satz}
+\begin{satz}\label{satz:isome-isomo-TR-BR}
   \begin{enumerate}
    \item Jeden normierten Vektorraum kann man isometrisch isomorph auf einen
     dichten Teilraum eines geeigneten Banachraums abbilden.
