Die Folgerungen aus dem Stone‐Weierstraß‐Satz
Ich habe bei den Polynomen \alpha_i\in\N gesetzt. Vorher war das nicht
festgelegt und andere Exponenten außer natürlichen Zahlen erschienen mir
nicht sinnvoll.

Für die Äquivalenzklasse bei den periodischen Funktionen habe ich [x] als
Symbol verwendet und nicht \overline{x}.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1382 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -2604,43 +2604,74 @@ Also ist nach \autoref{satz:U-Banachraum} $(\overline{C}(\Omega),
 \end{satz}
 
 \begin{folger}
-  $\Omega\in \R^{n}$ offen und beschränkt.
+  Der \highl{Raum der Polynome}~$\Polyn$ liegt dicht in
+  $C(\overline{\Omega})$, falls $\Omega\subset\R^{n}$ ein offenes und
+  beschränktes Gebiet ist. $C(\overline{\Omega})$ ist daher separabel.
+  \begin{gather*}
+    \Polyn = \{ p(x)
+               = \sum_{\mathclap{\alpha\in\N^{n}}}
+               a_{\alpha} x^{\alpha} \text{~mit~} a_{\alpha}\in\R\}
+  \end{gather*}
+  (siehe auch die Definition für $n=1$ im \autoref{bsp:endl-dim-VR})
 
-  Dann folgt daraus: Die Menge aller Polynome $\Polyn=\{
-  p(x)=\sum_{\alpha=(\alpha_{1},\ldots,\alpha_{n})\text{endl.}}
-  a_{\alpha}x^{\alpha} : a_{\alpha}\in \R\}$ ist dicht in $C(\overline{\Omega})$.
-
-  Weiterhin gilt: $C(\overline{\Omega})$ ist separabel.
+  Jede gleichmäßig stetige Funktion über einem Gebiet lässt sich also durch
+  ein Polynom beliebig genau approximieren.
 
   \begin{proof}
-    Man sieht leicht, dass $\Polyn$ eine Unteralgebra ist. $1\in
-    \Polyn$ (für $\alpha=0$). $x^{0},y^{0}\in \overline{\Omega}$,
-    $x^{0}\ne y^{0}$ $\Longrightarrow$ $\exists j \wedge x^{0}_{j}
-    \ne y_{j}^{0}$ $\Longrightarrow$ Polynom $p(x) = x_{j}$ trennt
-    $x^{0}$ und $y^{0}$.
+    Es ist leicht nachzuprüfen, dass $\Polyn$ eine Unteralgebra ist, also dass
+    das Produkt zweier Polynome wieder ein Polynom ist. Da mit $\alpha=0$ das
+    Polynom~$1$ zur Menge gehört, sind alle konstanten Polynome Teil der
+    Unteralgebra. Weiterhin ist die Unteralgebra punktetrennend, da es bei
+    zwei unterschiedlichen Punkten~$x,y\in\overline{\Omega}\subset\R^{n}$
+    einen Index~$j$ geben muss, in dem sie sich unterscheiden; $x_{j}\ne
+    y_{j}$. Ein Polynom mit $\alpha_{j}\ne0$ bildet die zwei Punkte auf
+    unterschiedliche Punkte ab.
+
+    Somit sind alle Bedingungen von \autoref{satz:weierstr} gegeben und die
+    Aussage ergibt sich damit.
   \end{proof}
 \end{folger}
 
-\begin{folger}
-  Die Menge aller trigonometrischen Polynome $\mathcal{T} := \{ t(x) :=
-  a_{0}+\sum_{k=1}^{n} a_{k}\cos x+b_{k}\sin x \colon a_{k},b_{k}\in\R,
-  n\in\N\}$ ist dicht in $C_{\text{per}}([-\pi,\pi]) = \{ f\colon [-\pi, \pi]
-  \rightarrow \R \colon f \text{stetig}, f(-\pi) = f(\pi)\} \cong C_{per}(\R)
-  = \{ f \text{stetig}, \forall x\in \R\colon f(x) = f(x+2\pi) \} \cong
-  C(\Pi), \Pi=\frac{\R}{2\pi\Z} = \{\overline{x}\colon \overline{x} = x+2\pi\Z\}$
+\begin{folger}\label{fol:sin-cos-dicht-per}
+  Die Räume $C_{\text{per}}([-\pi,\pi])$, $C_{\text{per}}(\R)$ und $C(\Pi)$
+  der periodischen Funktionen sind untereinander isometrisch isomorph und der
+  metrische Raum~$(\Pi, d)$ mit der Metrik $d(x, y) =
+  \inf\{\abs{x-y+2k\pi}\colon k\in\Z\}$ ist kompakt.
+  \begin{align*}
+    C_{\text{per}}([-\pi,\pi])
+       &:= \{ f\colon [-\pi, \pi] \rightarrow \R \colon
+            f \text{~stetig}, f(-\pi) = f(\pi)\}\\
+    C_{\text{per}}(\R)
+       &:= \{ f\colon f \text{~stetig}, \forall x\in \R\colon
+             f(x) = f(x+2\pi) \}\\
+    \Pi &:= \R_{\nicefrac{}{2\pi\Z}}
+       := \{ [x]_{2\pi\Z}\colon [x]_{2\pi\Z} = x + 2\pi\Z \}
+  \end{align*}
+  (siehe auch die Definition von Äquivalenzklasse und Faktormenge in
+  \autoref{satz:isome-isomo-TR-BR})
 
-  $d(\overline{x}, \overline{y}) = \inf\{\abs{x-y+2k\pi}\colon k\in\Z\}$
-  $\Longrightarrow$ $(\Pi, d)$ kompakter metrischer Raum
+  Der \highl{Raum der trigonometrischen Polynome} $\mathcal{T}$ ist dicht in
+  $C(\Pi)$.
+  \begin{gather*}
+    \mathcal{T}
+       := \{f\big| f(x) = a_{0} + \sum_{k=1}^{n} a_{k}\cos x+b_{k}\sin x \colon
+            a_{k},b_{k}\in\R, n\in\N\}
+  \end{gather*}
+  Für alle $x'\in[x]_{2\pi\Z}$ ist $f(x') = f(x)$.
+  \help{Sind das im \autoref{bsp:endl-dim-VR} auch schon trigonometrische
+    Polynome? Ist das $\mathcal{T}=\mathcal{T}^{n}$?}
 
-  $f(x) = \overline{f}(\overline{x})$
+  Alle periodischen Funktionen können also durch eine Summe aus Vielfachen von
+  Sinus und Kosinus beliebig genau angenähert werden.
+
   \begin{proof}
-    Man sieht leicht, dass $\mathcal{T}$ eine Unteralgebra ist und die
-    konstantan Funktionen enthält.
-
-    $x_{0}\in (0,\pi), y_{0} \in(-\pi,0)$ $\Longrightarrow$ $\sin x_{0}
-    \ne \sin y_{0}$\\
-    $x_{0},y_{0}\in [0,\pi] \vee [-\pi,0], x_{0}\ne y_{0}$
-    $\Longrightarrow$ $\cos x_{0} \ne \cos y_{0}$
+    Man sieht leicht, dass $\mathcal{T}$ neben allen Produkten von zwei
+    beliebigen Elementen auch die konstanten Funktionen enthält. Außerdem ist
+    $\mathcal{T}$ punktetrennend, da zwei Punkte $x\in(0,\pi)$ und
+    $y\in(0,\pi)$ durch $\sin x \ne\sin y$ auf unterschiedliche Punkte
+    abgebildet werden und zwei Punkte $x,y\in[-\pi,0]$ oder $x,y\in[0,\pi]$
+    mit $x\ne y$ durch $\cos x \ne\cos y$ auf unterschiedliche Punkte
+    abgebildet werden. Also kann \autoref{satz:weierstr} angewendet werden.
   \end{proof}
 \end{folger}
 
