--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -219,6 +219,22 @@
 % http://www.tug.org/TUGboat/Articles/tb18-1/tb54becc.pdf
 \newcommand*{\ez}{\mathrm{e}}               % eulersche Zahl
 \newcommand*{\ie}{\mathrm{i}}               % imaginäre Einheit
+\makeatletter
+\newcommand*{\diff}{%                       % Differentialoperator d (wie bei
+                                            % \int ... dx)
+  \@ifnextchar^{\@diff}{\@diff^{}}%
+}
+\newcommand*{\@diff}{}
+\def\@diff^#1#2{%
+  \mathop{\mathrm{\mathstrut d}}%
+  \nolimits^{#1}%
+  \ifx#2(\else%
+  \ifx#2[\else%
+  \ifx#2\{\else%
+    \!%
+  \fi\fi\fi#2%
+}
+\makeatother
 
 \makeindex
 
