Definition der differentierbaren Räume und Bemerkung dazu
git-svn-id: https://svn.lug-jena.de/uni-skripte@1389 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -2840,28 +2840,49 @@ Also ist nach \autoref{satz:U-Banachraum} $(\overline{C}(\Omega),
 \label{sec:1.2.3}
 
 \begin{defini}
-  $\Omega\subset \R^{n}$ offen, $m\in \N_{0}, \K=\R$ oder $\C$
+  Für ein offenes Gebiet~$\Omega\subset \R^{n}$ und $m\in \N_{0}$ bezeichnet
+  \highl{$C^{m}(\Omega)$} die Menge der $m$"~mal stetig differenzierbaren
+  Funktionen über $\Omega$, \highl{$\overline{C}^{m}(\Omega)$} die Menge der
+  $m$"~mal gleichmäßig stetig differenzierbaren und beschränkten Funktionen
+  über $\Omega$ und \highl{$C^{\infty}(\Omega)$} die Menge der beliebig oft
+  stetig differenzierbaren Funktionen über $\Omega$. Der Raum
+  $(\overline{C}^{m},\norm{\cdot}_{\overline{C}^{m}})$ ist ein normierter
+  Vektorraum.
+  \begin{align*}
+    C^{m}(\Omega)
+       &:= \{ f\colon \Omega \rightarrow \K \colon \forall \alpha,
+             \abs{\alpha} \leq m ~\exists D^{\alpha}f \in C(\Omega)\}\\
+    \overline{C}^{m}(\Omega)
+       &:= \{ f\in C^{m}(\Omega) \colon \forall \alpha, \abs{\alpha} \leq m,
+              D^{\alpha}f\in \overline{C}(\Omega)\}\\
+    C^{\infty}(\Omega)
+       &:= \{ f\colon \Omega \rightarrow \K\colon \forall m \in \N_{0}\colon
+             f\in C^{m}(\Omega) \}\\
+    \norm{f}_{\overline{C}^{m}}
+       &:= \sum_{\abs{\alpha}\leq m} \norm{D^{m}f}_{\infty}
+  \end{align*}
 
-  \begin{enumerate}
-   \item $C^{m}(\Omega) := \{ f\colon \Omega \rightarrow \K \colon \forall \alpha,
-    \abs{\alpha} \leq m \exists D^{\alpha}f \in C(\Omega)\}$
-   \item $\overline{C}^{m}(\Omega) := \{ f\in C^{m}(\Omega) \colon \forall
-    \alpha, \abs{\alpha} \leq m, D^{\alpha}f\in \overline{C}(\Omega)\}$
-    gleichm. stetig + beschränkt
+  Ist $\Omega$ zusätzlich noch beschränkt, so bezeichnet
+  \highl{$C^{m}(\overline{\Omega})$} die Menge der $m$"~mal stetig,
+  differenzierbaren Funktionen über $\Omega$, die zusätzlich eine Fortsätzung
+  auf dem Rand von $\Omega$ haben.
+  \begin{gather*}
+    C^{m}(\overline{\Omega})
+       := \{ f\in C^{m}(\Omega)\colon \forall \alpha, \abs{\alpha}\leq m,
+             \exists \text{~stetige Fortsetzung von $D^{\alpha}f$ auf~}
+             \overline{\Omega}\}
+  \end{gather*}
 
-    $\norm{f}_{\overline{C}^{m}} := \sum_{\abs{\alpha}\leq m} \norm{D^{m}f}_{\infty}$
-   \item $C^{\infty}(\Omega) := \{ f\colon \Omega \rightarrow \K\colon \forall m
-    \in \N_{0} f\in C^{m}(\Omega) \}$
-   \item $\Omega$ beschränkt, $C^{m}(\overline{\Omega}) := \{ f\in
-    C^{m}(\Omega)\colon \forall \alpha, \abs{\alpha}\leq m, \exists \text{stetige
-    Fortsetzung von } D^{\alpha}f \text{auf} \overline{\Omega}\}$
-  \end{enumerate}
+  (vergleiche auch mit \autoref{def:offene-beschr-Gebiete} und
+  \autoref{bem:Gleichheit-B-C-CB})
 \end{defini}
 
 \begin{bemerk}
-  $\Omega$ offen + beschränkt $\Rightarrow$ $\overline{C}^{m}(\Omega) =
-  C^{m}(\overline{\Omega})$ setzen $\overline{C}^{0}(\Omega) =
-  \overline{C}(\Omega)$
+  Wenn $\Omega$ ein offenes und beschränktes Gebiet ist, dann gilt
+  $\overline{C}^{m}(\Omega) = C^{m}(\overline{\Omega})$, wobei
+  $\overline{C}^{0}(\Omega) :=\overline{C}(\Omega)$ ist.
+  \help{Stimmt das? Oder soll das $\overline{C}^{m}(\Omega) \subset
+    C^{m}(\overline{\Omega})$ sein?}
 \end{bemerk}
 
 \begin{satz}
