--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -2886,39 +2886,54 @@ Also ist nach \autoref{satz:U-Banachraum} $(\overline{C}(\Omega),
 \end{bemerk}
 
 \begin{satz}
-  $\Omega\subset \R^{n}$ offen, $m\in \N_{0}$
-
-  Dann ist $\overline{C}^{m}(\Omega)$ bezüglich der Norm
+  Für ein offenes Gebiet $\Omega\subset \R^{n}$ und alle $m\in \N_{0}$ ist
+  $\overline{C}^{m}(\Omega)$ bezüglich der Norm
   $\norm{\cdot}_{\overline{C}^{m}}$ ein Banachraum.
 
   \begin{proof}
-    $\norm{\cdot}_{\overline{C}^{m}}$ ist normiert. Wissen
-    $\overline{C}(\Omega)$ ist ein Banachraum.
+    \todo{Dieser Beweis ist voll mit unbegründeten Schritten oder Tatsachen
+      werden genutzt, die nicht so offensichtlich sind. Überarbeiten!}
 
-    Es sei $(f_{k})_{k}$ Cauchyfolge in $\overline{C}^{m}(\Omega)$.
-    Daraus folgt $\forall \alpha, \abs{\alpha}\leq m \exists f_{\alpha}\in
-    \overline{C}(\Omega)\colon
-    \norm{D^{\alpha}f_{k}-f_{\alpha}} \xrightarrow{k\rightarrow\infty} 0$
+    Dass $\norm{\cdot}_{\overline{C}^{m}}$ eine Norm ist, sieht man leicht und
+    aus \autoref{sec:stetige-funktionen} wissen wir bereits, dass
+    $\overline{C}(\Omega)$ ein Banachraum ist.
 
-    zeigen: $f_{\alpha} = D^{\alpha} f, \forall \alpha, \abs{\alpha}\leq m$
+    Es sei $(f_{k})_{k}$ eine Cauchyfolge in $\overline{C}^{m}(\Omega)$. Da
+    $\overline{C}(\Omega)$ eine Banachraum ist, gibt es für jede mögliche
+    Ableitung~$\alpha$ mit $\abs{\alpha}\leq m$ den
+    Grenzwert~$f_{\alpha}\in\overline{C}(\Omega)$ der
+    Folge~$(D^{\alpha}f_{k})_{k}$.
 
-    Es sei $\alpha = (1,0,\ldots,0) \Longrightarrow \frac{\partial
-    f_{k}}{\partial x_{1}} \rightarrow f_{\alpha}$ gleichm. auf $\Omega$
+    Wir zeigen, dass der Grenzwert~$f_{\alpha}$ der Folge der
+    Ableitungen~$D^{\alpha}f_{k}$ gleich der Ableitung des
+    Grenzwerts der Folge~$D^{\alpha} f$ ist; $f_{\alpha} = D^{\alpha}f$.
+    \help{Müssen wir nicht erstmal zeigen, dass die Folge überhaupt
+      konvergiert, also dass der Grenzwert existiert?}
+    Dazu sei $\alpha=(1,0,\dotsc,0)$. Dann konvergiert die
+    Folge~$(\frac{\partial f_{k}}{\partial x_{1}})_{k}\subset
+    \overline{C}(\Omega)$ gleichmäßig auf $\Omega$ gegen den
+    Grenzwert~$f_{\alpha}$. Also gilt:
+    \help{Wieso dürfen wir hier integrieren? Wer sagt, dass das Integral von
+      $f_{\alpha}$ existiert?}
+    \begin{gather*}
+      \int_{a}^{b} \frac{\partial f_{k}}{\partial x_{1}}
+         (t, x_{2},\dotsc,x_{n}) \diff t
+         \rightarrow
+         \int_{a}^{b} f_{\alpha}(t,x_{2},\dotsc,x_{n})\diff t
+    \end{gather*}
 
-    $\Longrightarrow$ $\int_{x_{1}^{0}}^{n} \frac{\partial f_{k}}{\partial
-    x_{1}}(t, x_{2},\ldots,x_{n})\,dt \rightarrow
-    \int_{x_{1}^{0}}^{x_{n}} f_{\alpha}(t,x_{2},\ldots,x_{n})\,dt$
-    andererseits:
+    Andererseits konvergiert die Folge der Differenzen der Integrale in $\R$
+    \begin{gather*}
+      f_{k}(b,\dotsc,x_{n}) - f_{k}(a,x_{2},\dotsc,x_{n})
+         \rightarrow
+         f_{0}(b,\dotsc,x_{n}) - f_{0}(a,x_{2},\dotsc,x_{n})
+    \end{gather*}
 
-    $(f_{k}(x_{1},\ldots,x_{n})- f_{k}(x_{1}^{0},x_{2},\ldots,x_{n}))
-    \rightarrow f_{0}(x_{1},\ldots,x_{n})-
-    f_{0}(x_{1}^{0},x_{2},\ldots,x_{n})$
+    Also muss es die Ableitung $\frac{\partial f_{0}}{\partial x_{1}}$ geben,
+    welche dann nach Konstruktion $f_{\alpha}$ ist.
 
-    $\Longrightarrow$ $\exists \frac{\partial f_{0}}{\partial x_{1}}(x) =
-    f_{\alpha}(x)\qquad (\alpha = (1,0,\ldots,0))$
-
-    Induktion $\Longrightarrow$ $\exists D^{\alpha}f = f_{\alpha},
-    \forall \alpha, \abs{\alpha}\leq m$
+    Mit der Induktion über $\alpha$ kann man zeigen, dass dies für alle
+    $\alpha$ mit $\abs{\alpha}\leq m$ gilt.
   \end{proof}
 \end{satz}
 
