--- a/linde-stochastik/skript.latex
+++ b/linde-stochastik/skript.latex
@@ -81,29 +81,27 @@
 
 \chapter*{Vorwort}
 {\itshape
-
   Dieses Skript ist im Rahmen des
   \href{http://www.minet.uni-jena.de/~joergs/skripte/}{Projekts
   "`Vorlesungsskripte der Fakultät für Mathematik und Informatik"'}
   entstanden und wird im Rahmen dieses Projekts weiter betreut. Das
-  Skript ist nach bestem Wissen und Gewissen entstanden. Denoch
+  Skript ist nach bestem Wissen und Gewissen entstanden. Dennoch
   garantiert weder der auf der Titelseite genannte Dozent, noch die
   Mitglieder des Projekts für dessen Fehlerfreiheit. Für etwaige Fehler
   und dessen Folgen wird von keiner der genannten Personen eine Haftung
   übernommen. Es steht jeder Person frei, dieses Skript zu lesen, zu
-  verändern oder auf anderen Medien verfügbar zu machen, solange ein
-  Verweis die Internetadresse \url{http://www.minet.uni-jena.de/~joergs/skripte/}
-  des Projekts enthalten ist.
+  verändern oder auf anderen Medien verfügbar zu machen und es an andere zu
+  verteilen, solange ein Verweis die Internetadresse des Projekts
+  \url{http://www.minet.uni-jena.de/~joergs/skripte/} enthalten ist.
 
-  \sloppy Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision\ und ist
-  vom \SVNDate. Eine (mögliche) aktuellere Ausgabe ist unter
-  \url{http://www.minet.uni-jena.de/~joergs/skripte/pdf/} ist eine
-  (mögliche) aktuellere Ausgabe verfügbar.
-  
+  Diese Ausgabe trägt die Versionsnummer~\SVNLastChangedRevision{} und ist
+  vom \SVNDate{}. Eine aktuellere Ausgabe könnte auf der oben genannten
+  Internetseite verfügbar sein.
+
   Jeder ist dazu aufgerufen, Verbesserungen, Erweiterungen und
-  Feh\-ler\-kor\-rek\-tu\-ren für das \linebreak[4] Skript ein\-zu\-reichen
+  Fehlerkorrekturen für das Skript einzureichen bzw. zu melden oder selbst
   bzw. zu melden oder selbst
-  einzupflegen -- einfach eine eMail an die
+  einzupflegen -- einfach eine E"~Mail an die
   \href{mailto:skripte@listserv.uni-jena.de}{Mailingliste
   \texttt{<skripte@listserv.uni-jena.de>}} senden. Weitere Informationen
   sind unter der oben genannten Internetadresse des Projekts verfügbar.
