Indexfehler im Abschnitt „Unabhägigkeit zuf. Größen“ beheben
Stefan Tilchner hat uns diesen Fehler gemeldet. Daher habe ich ihn auch
gleich in die Helferliste eingetragen.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1400 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/linde-stochastik/skript.latex
+++ b/linde-stochastik/skript.latex
@@ -113,6 +113,8 @@
     {Christian Raschka \texttt{<chrisra@informatik.uni-jena.de>}} (2003)
    \item \href{mailto:cat5@minet.uni-jena.de}
     {Matti Bickel \texttt{<cat5@minet.uni-jena.de>}} (2005)
+   \item \href{mailto:muuhkuh87@web.de}{Stefan Tilchner
+    \nolinkurl{<muuhkuh87@web.de>}} (2008)
   \end{itemize}
 }
 
