--- a/kuelshammer-algebra1/Kapitel4.tex
+++ b/kuelshammer-algebra1/Kapitel4.tex
@@ -15,7 +15,7 @@ $A$ berechnet $M' \in \N$ mit $M' < n_B$ und $M' \equiv M^{r_B} \pmod{n_B}$. Dan
 \end{array}\]
 Der Empfänger $B$ kann $M'$ entschlüsseln, in dem er $(M')^{s_B}$ berechnet, denn es gilt: \[(M')^{s_B} \equiv M \pmod{n_B}\] Das sieht man folgendermaßen:\\
 Wegen $r_Bs_B \equiv 1 \pmod{\left(p_B - 1\right)\left(q_B - 1\right)}$ existiert ein $t_B \in \N$ mit $r_Bs_B = 1 + t_B\left(p_B - 1\right)\left(q_B - 1\right)$. Also gilt: \[\left(M'^{s_B}\right) = \left(M^{r_B}\right)^{s_B} = M^{1 + t_B\left(p_B - 1\right)\left(q_b - 1\right)} = M\left(M^{r_B - 1}\right)^{t_B\left(q_B - 1\right)} \equiv M \pmod{p_B}\]
-Im Fall $p_B\not\mid M$ folgt aus dem \autoref{satz:3.8} (\textsc{Euler-Fermat}), und im Fall $p_B\mid M$ ist dies trivial.\\
+Im Fall $p_B\nmid M$ folgt aus dem \autoref{satz:3.8} (\textsc{Euler-Fermat}), und im Fall $p_B\mid M$ ist dies trivial.\\
 Analog ist $\left(M'\right)^{s_B} \equiv M \pmod{q_B}$, also auch $\left(M'\right)^{s_B} \equiv M \pmod{p_Bq_B}$.\\
 Nehmen wir an, ein "`Feind"' hört die verschlüsselte Nachricht $M'$ ab. Kann er sie entschlüsseln?\\
 \emph{Theoretisch ja}: schließlich muss er "`nur"' $n_B$ in Primfaktoren zerlegen. Dann kennt er $p_B$ und $q_B$, kann also $s_B$ mit dem erweiterten euklidischen Algorithmus berechnen und $M'$ genauso wie $B$ entschlüsseln.\\
