--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -304,7 +304,8 @@ a_{n}$ annehmen, sogar $a_{1} > \ldots > a_{n} > 0$. Division mit Rest
 mit $r + a_{2} + \ldots + a_{n} < a_{1} + a_{2} + \ldots + a_{2}$.\\
 Iteration ergibt schließlich:\\
 \[\gt(a_{1}, \ldots, a_{n}) = \gt(b).\]
-Dieses Verfahren hei"st euklidischer Algorithmus (\textsc{Euklid} 365--300).
+Dieses Verfahren heißt \highl[Algorithmus!euklidischer]{euklidischer
+  Algorithmus} (\textsc{Euklid} 365--300).
 \end{bem}
 
 % Beispiel
@@ -464,7 +465,7 @@ $\PZ = \{2, 3, 5, 7, 11, 13, \ldots\}$
 Jede natürliche Zahl $a \neq 1$ hat einen Primteiler.
 \begin{beweis}
   Wegen $1 \neq a\mid a$ ist $D \coloneqq \{d \in \N \colon 1 \neq d\mid a\} \neq
-  \emptyset$. Folglich existiert $p \coloneqq \min \ D$. Wäre $p \notin
+  \emptyset$. Folglich existiert $p \coloneqq \min D$. Wäre $p \notin
   \PZ$, so hätte $p$ einen Teiler $t \in \N$ mit $1 \neq t \neq
   p$. Dann wäre aber $t < p$ und $t \in D$ im Widerspruch zur Wahl
   von $p$. Also $p \in \PZ$.
@@ -477,7 +478,7 @@ $\abs{\PZ} = \infty$
 \begin{beweis}
   Seien $p_1, \ldots, p_r \in \PZ$. Nach \autoref{defi:1.5} hat
   $m \coloneqq p_1 \cdots p_{r}+1$ einen Primfaktor $p_{r+1}$. Wegen $p_1
-  \nmid  \ m, \ldots, p_r \nmid  \ m$ ist $p_{r+1} \notin \{p_1,
+  \nmid  m, \ldots, p_r \nmid  m$ ist $p_{r+1} \notin \{p_1,
     \ldots, p_r \}.$
 \end{beweis}
 \end{satz}
@@ -594,7 +595,7 @@ paarweise disjunkter Teilmengen von $M$ mit Vereinigung $M$.
 
 Bekanntlich erhält man umgekehrt zu jeder Partition $\mathcal{P}$
 einer Menge $M$ eine Äquivalenzrelation $(M, M, R)$, wenn man
-definiert: \[xRy \colon \Leftrightarrow \exists \ P \in \mathcal{P}
+definiert: \[xRy \colon \Leftrightarrow \exists\ P \in \mathcal{P}
 \colon x, y \in P.\] Ferner ist dann $M/R = \mathcal{P}$.
 
 Daher sind Äquivalenzrelationen auf einer Menge $M$ und Partitionen
@@ -754,7 +755,7 @@ und es folgt $17 \equiv 23 \cdot (-13) \cdot 17 \equiv 23 \cdot (-221)
   und sei $a_i = \prod_{p \in \PZ} p^{b_{ip}}$ mit $i = 1, \ldots, n$.
   Die gemeinsamen Vielfachen von $a_1, \ldots, a_n$ haben dann die
   Form:
-  \[\prod_{p \in \PZ}p^{c_p} \text{ mit } c_p \geq \max{\{b_{1p}, \ldots, b_{np}\}}\quad \forall\, p \in \PZ.\]
+  \[\prod_{p \in \PZ}p^{c_p} \text{ mit } c_p \geq \max{\{b_{1p}, \ldots, b_{np}\}}\quad \forall\,p \in \PZ.\]
   Daher ist $k \coloneqq \prod_{p \in \PZ}p^{\max{\{b_{1p}, \ldots,
       b_{np}\}}}$ das einzige kleinste gemeisame Vielfache von $a_1,
   \ldots, a_n$. Dies zeigt, dass beliebige $a_1, \ldots, a_n \in \Z$
@@ -842,7 +843,7 @@ ist $\max\{\min\{b_{1p}, b_{2p}\}, \ldots, \min\{b_{1p}, b_{np}\}\}= c$.
 Zum Nachweis der Eindeutigkeit sei $x' \in \Z$ weitere Lösung von
 \autoref{eq:25-1}. Dann: $x' \equiv a_i \equiv x \pmod{m_i}$ für $i = 1,
 \ldots, k$, d.\,h. $x' \equiv x \pmod{\kgv(m_1, \ldots, m_k)}$. Dann
-ist $x' \equiv x \equiv a_i \pmod{m_i} \ \ (i = 1, \ldots, k)$,
+ist $x' \equiv x \equiv a_i \pmod{m_i}$ für $i = 1, \ldots, k$,
 d.\,h. $x'$ ist auch Lösung von \autoref{eq:25-1}. 
 \end{beweis}
 \end{satz}
@@ -924,7 +925,7 @@ ein Ring\footnote{Hier ist das Nullelement das Einselement; aber kein
   nach \autoref{satz:2.1}. Dann $a + b + m\Z = a' + b' + m\Z$. Damit
   ist die Wohldefiniertheit gezeigt. Die Rechenregeln folgen
   leicht. Denn z.\,B.: ist $(a + m\Z)(b + m\Z) = ab + m\Z = ba + m\Z =
-  (b + m\Z)(a + m\Z) \ (a, b \in \Z)$. Nullelement ist $0 +
+  (b + m\Z)(a + m\Z)$ für $a, b \in \Z$. Nullelement ist $0 +
   m\Z$. Einselement ist $1 + m\Z$, negativ zu $a + m\Z$ ist $-a +
   m\Z$.
 \end{beweis}
@@ -947,7 +948,8 @@ $\ZmZ{6}$:
 3 & 3 & 4 & 5 & 0 & 1 & 2\\
 4 & 4 & 5 & 0 & 1 & 2 & 3\\
 5 & 5 & 0 & 1 & 2 & 3 & 4\\
-\end{tabular} \ \ \
+\end{tabular}
+
 \begin{tabular}[t]{l|llllll}
 $\cdot$ & 0 & 1 & 2 & 3 & 4 & 5\\
 \toprule
@@ -977,10 +979,10 @@ $\ZmZ{6}$ ist kein Körper. So ist z.\,B. $\underbrace{(2 + 6\Z)}_{\neq 0 +
   \[U(R) = \{a \in R \colon a \text{ invertierbar}\}\]
   ein Gruppe bezüglich $\cdot$, die \addindex{Einheitsgruppe} von $R$.
   Es ist $1_R$ das Einselement von $U(R)$.
-\item Im Fall $R = \ZmZ{m} \ \ (m \in \N)$ heißt: 
+\item Im Fall $R = \ZmZ{m}$ mit $m \in \N$ heißt: 
   \begin{align*}
-    U(R) & = \{a + m\Z \colon \exists \ b \in \Z \colon (a + m\Z)(b + m\Z) = 1 + m\Z\}\\
-    & = \{a + m\Z \colon \exists \ b \in \Z \colon ab \equiv 1 \pmod{m}\}\\
+    U(R) & = \{a + m\Z \colon \exists\ b \in \Z \colon (a + m\Z)(b + m\Z) = 1 + m\Z\}\\
+    & = \{a + m\Z \colon \exists\ b \in \Z \colon ab \equiv 1 \pmod{m}\}\\
     & \stackrel{\text{\autoref{satz:2.3}}}{=} \{a + m\Z \colon \ggt(a, m) = 1\}
   \end{align*}
   \addindex{prime Restklassengruppe modulo $m$}\footnote{Die Gruppe
@@ -1318,7 +1320,7 @@ Sei $K$ ein Körper.
   $\varphi = \sum_{i = 0}^{\infty}a_iX^i$, $\psi = \sum_{i =
     0}^{\infty}b_iX^i \in P$ und $r \in K$ gilt dann:
   \begin{itemize}
-  \item $\varphi = \psi \Leftrightarrow a_i = b_i \forall\, i$
+  \item $\varphi = \psi \Leftrightarrow a_i = b_i$ für alle $i$
   \item $\varphi + \psi = \sum_{i = 0}^{\infty}\left(a_i + b_i\right)X^i$
   \item $r\varphi = \sum_{i = 0}^{\infty}\left(ra_i\right)X^i$
   \item $\varphi\psi = \sum_{i = 0}^{\infty}\left(\sum_{j + k = i}a_jb_k\right)X^i$
@@ -1428,7 +1430,7 @@ Also ist $X^2 + 1 = \ggt(\varphi, \psi) = (-\frac{1}{2}X +
 \begin{satz}\label{satz:5.2}
   Für $\varphi_1, \ldots, \varphi_n, \psi \in K[X]$ gilt
   \[\ggt(\varphi_1, \ldots, \varphi_n)\mid \psi \Leftrightarrow
-  \exists \ \Xi_1, \ldots, \xi_n \in K[X] \colon \xi_1\varphi_1 +
+  \exists\ \Xi_1, \ldots, \xi_n \in K[X] \colon \xi_1\varphi_1 +
   \ldots + \xi_n\varphi_n = \psi\]
 \begin{beweis}
   Analog wie in $\Z$.
@@ -2064,12 +2066,12 @@ Schreibe $\delta \coloneqq ggT\left(\varphi, \mu\right) = \alpha\varphi + \beta\
 Dann: $\delta(b) = \alpha(b)\underbrace{\varphi(b)}_{= 0} + \beta(b)\underbrace{\mu(b)}_{= 0} = 0$.\\
 Nach Wahl von $\mu$ ist $\deg{(\delta)} = \deg{(\mu)}$.\\
 Da $\delta$, $\mu$ normiert mit $\delta|\mu$ sind, folgt $\mu = \delta|\varphi$.\\
-\item["`$\Leftarrow$"'] Sei $\mu|\varphi$, d.h. $\varphi = \mu\nu \ \left(\nu \in K[X]\right)$.\\
-Dann: $\varphi(b) = \mu(b) \cdot \nu(b) = 0$.\\
+\item["`$\Leftarrow$"'] Sei $\mu|\varphi$, d.\,h. $\varphi = \mu\nu$ für $\nu \in K[X]$.
+Dann: $\varphi(b) = \mu(b) \cdot \nu(b) = 0$.
 \end{itemize}
-Seien $\alpha, \beta \in K[X]$ mit $\mu = \alpha\beta$.\\
-Dann: $0 = \mu(b) = \alpha(b) \cdot \beta(b)$, also \footnote{Unterschied zu Matrizen in Körpern: $a \cdot b = 0 \Leftrightarrow a = 0 \vee b = 0$} $\alpha(b) = 0$ oder $\beta(b) = 0$, o.B.d.A. $\alpha(b) = 0$.\\
-Daher: $\mu|\alpha \ \mu$, d.h. $\alpha = a\mu$ für ein $a \in K \backslash \left\{0\right\}$.\\
+Seien $\alpha, \beta \in K[X]$ mit $\mu = \alpha\beta$.
+Dann: $0 = \mu(b) = \alpha(b) \cdot \beta(b)$, also \footnote{Unterschied zu Matrizen in Körpern: $a \cdot b = 0 \Leftrightarrow a = 0 \vee b = 0$} $\alpha(b) = 0$ oder $\beta(b) = 0$, o.B.d.A. $\alpha(b) = 0$.
+Daher: $\mu|\alpha \ \mu$, d.\,h. $\alpha = a\mu$ für ein $a \in K \backslash \left\{0\right\}$.
 Dies zeigt: $\mu$ irreduzibel.
 \end{beweis}
 
@@ -2090,8 +2092,8 @@ Man zeigt leicht:
 \begin{satz}\label{satz:7.2}
 Sei $L|K$ Körpererweiterung und $b \in L$ algebraisch über $K$ mit
   Minimalpolynom $\mu$ vom Grad $n$. Dann ist die Abbildung \[f \colon
-  \underbrace{K[X]|(\mu)}_{\text{Körper, weil }\mu \text{ irreduziebl}}
-  \rightarrow K(b), \ \varphi + (\mu) \mapsto \varphi(b)\] ein
+  \underbrace{K[X]|(\mu)}_{\text{Körper, weil }\mu \text{ irreduzibel}}
+  \rightarrow K(b), \varphi + (\mu) \mapsto \varphi(b)\] ein
   Körperisomorphismus; insbesondere ist $\left[K(b):K\right] = \deg{\mu} = n <
   \infty$, und \[K(b) = \left\{a_0 + a_1b + \ldots + a_{n-1}b^{n-1} \colon
   a_0, \ldots, a_{n-1} \in K\right\}.\]
@@ -2172,7 +2174,7 @@ Koeffizientenvergleich \footnote{$1, \sqrt{2}$ sind linear unabhängig; $3 = 3
 Im Fall $a = 0$ wäre $3 = 2b^2$, was nicht geht. Im Fall $b = 0$ wäre $3 = a^2$, was auch nicht geht.\\
 Daher ist $\sqrt{3}$ algebraisch über $\Q\left(\sqrt{2}\right)$ mit Minimalpolynom $X^2 - 3$.\\
 Folglich: $\left[\left(\Q\left(\sqrt{2}\right)\right)\left(\sqrt{3}\right):\Q\left(\sqrt{2}\right)\right] = \deg{\left(X^2 - 3\right)} = 4$.\\
-Gradsatz: $\left[\Q\left(\sqrt{2}, \sqrt{3}\right):\Q\right] = 4$. Insbesondere $\sqrt{2} + \sqrt{3} \in \Q\left(\sqrt{2}, \sqrt{3}\right)$ ist algebraisch über $\Q$. Was ist das Minimalpolynom von $\sqrt{2} + \sqrt{3}$ über $\Q$? $Q\left(\sqrt{2}\right)$ hat Basis $1, \sqrt{2}$ über $\Q, \Q\left(\sqrt{2}, \sqrt{3}\right):\Q\left(\sqrt{2}\right)$ hat Basis $1, \sqrt{3}$ über $\Q$. Gradsatz: $1, \sqrt{2}, \sqrt{3}, \sqrt{2} \cdot \sqrt{3} = \sqrt{6} \ \Q$-Basis von $\Q\left(\sqrt{2}, \sqrt{3}\right)$.
+Gradsatz: $\left[\Q\left(\sqrt{2}, \sqrt{3}\right):\Q\right] = 4$. Insbesondere $\sqrt{2} + \sqrt{3} \in \Q\left(\sqrt{2}, \sqrt{3}\right)$ ist algebraisch über $\Q$. Was ist das Minimalpolynom von $\sqrt{2} + \sqrt{3}$ über $\Q$? $Q\left(\sqrt{2}\right)$ hat Basis $1, \sqrt{2}$ über $\Q, \Q\left(\sqrt{2}, \sqrt{3}\right):\Q\left(\sqrt{2}\right)$ hat Basis $1, \sqrt{3}$ über $\Q$. Gradsatz: $1, \sqrt{2}, \sqrt{3}, \sqrt{2} \cdot \sqrt{3} = \sqrt{6}\ \Q$-Basis von $\Q\left(\sqrt{2}, \sqrt{3}\right)$.
 \[\left.\begin{array}{lcl}
 b^0 & = & 1\\
 b^1 & = & \sqrt{2} + \sqrt{3}\\
@@ -2195,7 +2197,8 @@ Folglich: $\left[\Q\left(\sqrt{2} + \sqrt{3}\right):\Q\right] = 4$ und $\Q\left(
 
 % Satz 7.4
 \begin{satz}\label{satz:7.4}
-Sei $E$ endlicher Körper mit $\left|E\right| = p^n \ \left(p \in \PZ, n \in \N\right)$ und sei $F$ Teilkörper von $E$ (z.B.: der Primkörper von $E$).\\
+Sei $E$ endlicher Körper mit $\left|E\right| = p^n\ \left(p \in \PZ, n \in
+  \N\right)$ und sei $F$ Teilkörper von $E$ (z.\,B.: der Primkörper von $E$).\\
 Dann ist $E \cong F[X] / (\varphi)$ für ein irreduzibles Polynom $\varphi \in F[X]$ mit $\varphi|X^{p^n} - X$.
 \end{satz}
 
@@ -2208,9 +2211,9 @@ Wegen $b^{p^n} = b$ gilt: $\mu|X^{p^n} - X$. \footnote{Minimalpolynom teilt jede
 
 % Bemerkung 7.3
 \begin{bem}\label{bem:7.3}
-Sei $K$ ein Körper.\\
+Sei $K$ ein Körper.
 Nach Aufgabe 15 gilt im Polynomring $K[X]$: \[ggT\left(X^m-1, X^n-1\right) = X^{ggT(m, n)}-1.\] Mit Aufgabe 5 folgt daraus leicht: 
-\[ggT\left(X^{q^a}-X, X^{q^b}-X\right) = X^{ggT(a, b)}-X \ \ \left(a, b, q \in \N\right)\]
+\[ggT\left(X^{q^a}-X, X^{q^b}-X\right) = X^{ggT(a, b)}-X\quad\left(a, b, q \in \N\right)\]
 \end{bem}
 
 % Satz 7.5
@@ -2229,7 +2232,7 @@ Sei umgekehrt $\varphi \in K[X]$ irreduzibel mit $\varphi|X^{q^n} - X$ und $d
   \coloneqq \deg{\varphi}$. Wie im ersten Teil des Beweises ist $\varphi|X^{q^d} -
   X$. Daher: $\varphi|ggT\left(X^{q^d} - X, X^n - X\right) = X^{q^{ggT(d, n)}} - X$, d.\,h. $X^{q^{ggT(d, n)}} - X + (\varphi) = 0$ in $K[X] / (\varphi)$.\\
 Jedes Element $K[X] / (\varphi)$ kann man in der folgenden Form schreiben: \[b
-  = a_0 + a_1X + \ldots + a_{d-1}X^{d-1} + (\varphi) \ (a_i \in K).\] Für $a
+  = a_0 + a_1X + \ldots + a_{d-1}X^{d-1} + (\varphi)\ (a_i \in K).\] Für $a
   \in K$ ist $a = a^q = a^{q^2} = \ldots$. Daher ist \footnote{alle $b$ sind Nullstellen von $X^{q^{ggT(d, n)}} - X$} $b^{q^{ggT(d, n)}} = b$ für alle $b \in K[X]/(\varphi)$. Also $q^d = \left|K[X]/(\varphi)\right| \leq q^{ggT(d, n)} \leq q^d$, d.\,h. $d = ggT(d, n)|n$.\\
 Folglich genügt zu zeigen, dass kein Primfaktor von $X^{q^n} - X$ mehrfach auftritt. Sei also $\varphi \in K[X]$ irreduzibel mit $\varphi^2|X^{q^n} - X$. Schreibe: $X^{q^n} - X = \varphi^2\varphi$ mit $\psi \in K[X]$. Formale Ableitung liefert den Widerspruch: 
 \[\begin{array}{lcl}
@@ -2291,12 +2294,12 @@ Sei $\left|K\right| = q$, also $\left|K[X]/(\varphi)\right| = q^n =
 
 % Bemerkung 7.5
 \begin{bem}\label{bem:7.5}
-Für $p \in \PZ$ und $n \in \N$ bezeichnet man den im wesentlichen eindeutig bestimmten Körper mit $p^n$ Elementen $\F_{p^n}$, oder $GF(p^n)$ (\addindex{Galoisfeld}). Beachte: $\F_p \cong \ZmZ{p}$, $\F_{p^n} \not\cong \ZmZ{p^n}$ für $n > 1$.
+Für $p \in \PZ$ und $n \in \N$ bezeichnet man den im wesentlichen eindeutig bestimmten Körper mit $p^n$ Elementen $\F_{p^n}$, oder $GF(p^n)$ (\addindex{Galoisfeld}). Beachte: $\F_p \cong \ZmZ{p}, \F_{p^n} \ncong \ZmZ{p^n}$ für $n > 1$.
 \end{bem}
 
 % Beispiel 7.6
 \begin{bsp}\label{bsp:7.6}
-$\left[\Q\left(\sqrt{2}\right):\Q\right] = 2=\left[\Q\left(\sqrt{3}\right):\Q\right]$, aber $\underbrace{\Q\left(\sqrt{2}\right)}_{\text{hier Element mit }a^2 = 2} \not\cong \underbrace{\Q\left(\sqrt{3}\right)}_{\text{hier kein Element mit }a^2 = 2}$, denn in $\Q\left(\sqrt{2}\right)$ exisitiert kein $b$ mit $b^2 = 3$.
+$\left[\Q\left(\sqrt{2}\right):\Q\right] = 2=\left[\Q\left(\sqrt{3}\right):\Q\right]$, aber $\underbrace{\Q\left(\sqrt{2}\right)}_{\text{hier Element mit }a^2 = 2} \ncong \underbrace{\Q\left(\sqrt{3}\right)}_{\text{hier kein Element mit }a^2 = 2}$, denn in $\Q\left(\sqrt{2}\right)$ exisitiert kein $b$ mit $b^2 = 3$.
 \end{bsp}
 
 % Satz 7.8
@@ -2312,7 +2315,7 @@ Seien $i, j \in \N_0$ mit $1 \leq i \leq j < n$ und $f^i = f^j$. Dann ist
 Andererseits existiert ein $b \in \F_{p^n}$ mit $\F_{p^n} = \left\{0, 1, b, b^2, \ldots, b^{p^n-2}\right\}$ und $b^{p^n-1} = 1$.\\
 Der Primkörper $P$ von $\F_{p^n}$ ist zu $\F_p$ isomorph, o.\,B.\,d.\,A. $\F_p = P \subseteq \F_{p^n}$.\\
 Wegen $\F_{p^n} = \F_p(b)$ hat das Minimalpolynom $\mu$ von $b$ über $\F_p$ den Grad $n$.\\
-Schreibe $\mu = X^n + a_{n-1}X^{n-1} + \ldots + a_1X + a_0 \ (a_i \in \F_p)$.\\
+Schreibe $\mu = X^n + a_{n-1}X^{n-1} + \ldots + a_1X + a_0$ mit $a_i \in \F_p$.\\
 Für jeden Körperautomorphismus $g$ von $\F_{p^n}$ gilt: $g(a) = a$ für $a \in \F_p$, und 
 \[\begin{array}{cl}
 & g(b)^n + a_{n-1}g(b)^{n-1} + \ldots + a_1g(b) + a_0\\
@@ -2349,7 +2352,7 @@ Dabei:
 \begin{itemize}
 	\item Nachricht = Vektor in $K^k$ $\left(K \text{ endlicher Körper, } \left|K\right| = q\right)$ [oft $K = \F_2$, aber: bei CD, DVD: $K = \F_{256}$]
 	\item Codierung: injektive Abbildung\\
-	$\underbrace{E}_{\text{Encode}} \colon K^k \mapsto K^n \ \left(n > k\right)$  [oft: $E$ linear]
+	$\underbrace{E}_{\text{Encode}} \colon K^k \mapsto K^n\ \left(n > k\right)$  [oft: $E$ linear]
 	\item Decodierung: $D \colon K^n \mapsto K^k$ mit $D \circ E = id_{K^k}$
 	\item Hilfreich \addindex{Hamming--Abstand} \footnote{Hamming: Pionier der Codierungstheorie} $d \colon K^n \times K^n \mapsto \R$ \footnote{$d$ Metrik}
 	\[d\left(x, y\right) \coloneqq \left|\left\{i \colon 1 \leq i \leq n, x_i \neq y_i\right\}\right| \text{ für } x = \left(x_1, \ldots, x_n\right), \left(y_1, \ldots, y_n\right) \in K^n\] misst Anzahl der Fehler:
@@ -2393,7 +2396,7 @@ Sei $C \coloneqq (\varphi) / \left(X^n - 1\right)$ wie oben und $l \coloneqq \de
 
 % Beweis
 \begin{beweis}
-Schreibe $\varphi = a_0 + a_1X + \ldots + a_lX^l \ \left(a_0, \ldots, a_l \in K, a_l \neq 0\right)$.\\
+Schreibe $\varphi = a_0 + a_1X + \ldots + a_lX^l\ \left(a_0, \ldots, a_l \in K, a_l \neq 0\right)$.\\
 Dann sind 
 \[\begin{array}{rcllllll}
 \varphi + \left(X^n - 1\right) & = & a_0 & + & a_1X + & & \ldots + a_lX^l & + \left(X^n - 1\right)\\
@@ -2405,7 +2408,7 @@ offenbar linear unabhängig in $C$.\\
 Also: $\dim C \geq n - l$.\\
 Wegen $\varphi|X^n - 1$ existiert ein $\psi \in K[X]$ mit $X^n - 1 = \varphi\psi$. Sei $\alpha \in (\varphi)$, etwas $\alpha = \beta\varphi$ mit $\beta \in K[X]$.\\
 Division mit Rest: $\beta = \kappa\psi + \rho$ mit $\deg\rho < \deg\psi = n - l$.\\
-Schreibe $\rho = r_0 + r_1X + \ldots + r_{n - l - 1}X^{n - l - 1} \ \left(r_i \in K\right)$.\\
+Schreibe $\rho = r_0 + r_1X + \ldots + r_{n - l - 1}X^{n - l - 1}\ \left(r_i \in K\right)$.\\
 Dann: \[
 \begin{array}{lcl}
 \alpha + \left(X^n - 1\right) & = & \beta\varphi + \left(X^n - 1\right) = \kappa\underbrace{\varphi\psi}_{= \left(X^n - 1\right)} + \rho\varphi + \left(X^n - 1\right)\\
@@ -2472,7 +2475,8 @@ Die Punkte in $M_{\infty} \coloneqq \bigcup\limits_{i = 0}^{\infty}M_i$ heißen d
 \begin{satz}\label{satz:9.1}
 Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
   Teilkörper von $\C$, der mit einer komplexen Zahl $z$ auch $\overline{z}$
-  und jede Quadratwurzel aus $z$ enthält\footnote{D.\,h. $M_{\infty}$ abgeschlossen gegenüber $+, -, \cdot, :, -, \sqrt{ \ }$}.
+  und jede Quadratwurzel aus $z$ enthält\footnote{D.\,h. $M_{\infty}$
+  abgeschlossen gegenüber $+, -, \cdot, :, -, \sqrt{ }$}.
 \end{satz}
 
 % Beweis
@@ -2526,7 +2530,7 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
 	\item $z \in H_{\infty} \Rightarrow \Re(z), \Im(z) \in M_{\infty}$:\\
 	\InitGraph{4}{3}{0.2}{0.2}{1cm}
 	\Axes
-	\TextAt(0, 2)[l]{$\Im(z) \ \operatorname{i}$}
+	\TextAt(0, 2)[l]{$\Im(z)\ \operatorname{i}$}
 	\TextAt(2, 0)[b]{$\Im(z)$}
 	\TextAt(3, 0)[b]{$\Re(z)$}
 	\TextAt(3, 2)[r]{$z$}
@@ -2605,7 +2609,7 @@ Für jede Teilmenge $M \subseteq C$ mit $0, 1 \in M$ ist $M_{\infty}$ ein
 	\MedPointAt(0, 1.722)
 	\MedPointAt(3, 0)
 	\MedPointAt(-1, 0)
-	\TextAt(0, 1.722)[l]{$x \ \operatorname{i}$}
+	\TextAt(0, 1.722)[l]{$x\ \operatorname{i}$}
 	\TextAt(3, 0)[b]{z}
 	\TextAt(-1, 0)[b]{-1}
 	\LineAt(-1, 0, 0, 1.722)
@@ -2643,15 +2647,15 @@ Für jeden Teilkörper $L \subseteq C$ mit $L = \overline{L} $\footnote{$L = \over
 	und $\left(\lambda, \mu\right)$ liegt in $L \times L$; wegen $\Re\left(b\right) = \frac{b + \overline{b}}{2}$, $\Im\left(b\right)= \frac{b + \overline{b}}{2\operatorname{i}}$, $\ldots \in L$.\\
 	Daher: $z = a + \lambda b \in L$
 	
-	\item Sei $z$ Schnittpunkt der Geraden $a + \R b$ $\left(a, b \in L\right)$ mit dem Kreis \[\left\{x + \operatorname{i}y \colon x, y \in \R, \left(x - c\right)^2 + \left(y - d\right)^2 = \rho^2\right\} \ \ \left(c, d \in L, \rho \in L\right).\]
-	Schreibe $z = a + \lambda b \ \left(\lambda \in \R\right)$. Dann:
+	\item Sei $z$ Schnittpunkt der Geraden $a + \R b$ $\left(a, b \in L\right)$ mit dem Kreis \[\left\{x + \operatorname{i}y \colon x, y \in \R, \left(x - c\right)^2 + \left(y - d\right)^2 = \rho^2\right\}\ \left(c, d \in L, \rho \in L\right).\]
+	Schreibe $z = a + \lambda b\ \left(\lambda \in \R\right)$. Dann:
 	\[\left(\Re\left(a\right) + \lambda\Re\left(b\right) - c\right)^2 + \left(\Im\left(a\right) + \lambda\Im\left(b\right) - d\right)^2 = \rho^2\]
 	Dies ist eine quadratische Gleichung für $\lambda$ mit Kooeffizienten in $L \cap \R$.\\
 	Ist $D$ die entsprechende Diskriminante, so ist $D \in L$ und $\lambda \in L\left(\sqrt{D}\right)$, also $z = a + \lambda b \in L\left(\sqrt{D}\right)$.
 	
 	\item Sei $z$ Schnittpunkt der Kreise mit folgenden Gleichungen:
-	\[\left(x - a_j\right)^2 + \left(y - b_j\right)^2 = g_j^2 \ \ \ \left(a_j, b_j, \rho_j \in L, j = 1, 2\right).\]
-	Subtraktion ergibt eine Gleichung der Form $\left(a_1 - a_2\right)x + \left(b_1 - b_2\right) = c, \ \left(c \in L \cap \R\right)$.
+	\[\left(x - a_j\right)^2 + \left(y - b_j\right)^2 = g_j^2\ \left(a_j, b_j, \rho_j \in L, j = 1, 2\right).\]
+	Subtraktion ergibt eine Gleichung der Form $\left(a_1 - a_2\right)x + \left(b_1 - b_2\right) = c,\ \left(c \in L \cap \R\right)$.
 	Da die Mittelpunkte $a_1 + \operatorname{i}b_1, a_2 + \operatorname{i}b_2$ der gegebenen Kreise verschieden sind, beschreibt diese Gleichung eine Gerade, auf der mindestens zwei Punkte aus $L$ liegen. Also folgt die Behauptung aus (ii).
 \end{enumerate}
 \end{beweis}
@@ -2671,7 +2675,7 @@ $z$ ist aus $m$ konstruierbar $\Leftrightarrow \exists$ Folge von Teilkörpern
 % Beweis
 \begin{beweis}
 	\begin{itemize}
-		\item["`$\Rightarrow$"'] Die angegebene Bedingung sei erfüllt. Nach \autoref{satz:9.1} ist $\Q\left(M \cup \overline{M}\right) \subseteq M_{\infty}$. Sei also $n \in \left\{1, \ldots, m\right\}$ mit $L_{n-1} \subseteq M_{\infty}$, und sei $x \in L_n \backslash L_{n-1}$. Dann ist $L_n = L_{n-1}\left(x\right)$ und das Minimalpolynom von $x$ über $L_{n-1}$ hat die Form $\mu = X^2 + aX + b \ \left(a, b \in L_{n-1}\right)$.\\
+		\item["`$\Rightarrow$"'] Die angegebene Bedingung sei erfüllt. Nach \autoref{satz:9.1} ist $\Q\left(M \cup \overline{M}\right) \subseteq M_{\infty}$. Sei also $n \in \left\{1, \ldots, m\right\}$ mit $L_{n-1} \subseteq M_{\infty}$, und sei $x \in L_n \backslash L_{n-1}$. Dann ist $L_n = L_{n-1}\left(x\right)$ und das Minimalpolynom von $x$ über $L_{n-1}$ hat die Form $\mu = X^2 + aX + b\ \left(a, b \in L_{n-1}\right)$.\\
 		Also: $\left(x + \frac{a}{2}\right)^2 = x^2 + ax + \frac{a^2}{4} = \frac{a^2}{4} - b \in L_{n-1} \subseteq M_{\infty}$, also auch $x + \frac{a}{2} \in M_{\infty}$ nach 9.1. Damit $L_n = L_{n-1}\left(x + \frac{a}{2}\right) \subseteq M_{\infty}$.\\
 		Insbesondere $z \in M_{\infty}$.
 	\end{itemize}
