--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -138,9 +138,9 @@
 % Markup), sollte dieser Befehl verwendet werden. Das Argument wird
 % automatisch als Indexeintrag verwendet. Dieser kann aber auch als
 % optionales Argument selbst bestimmt werden.
-%\newcommand*{\highl}[2][]{\textbf{\boldmath{#2}}%
-%  \ifthenelse{\equal{#1}{}}{\index{#2}}{\index{#1}}%
-%}
+\newcommand*{\highl}[2][]{\textbf{\boldmath{#2}}%
+  \ifthenelse{\equal{#1}{}}{\index{#2}}{\index{#1}}%
+}
 
 % Um sicherzustellen, dass jeder Betrag-/jede Norm links und rechts die
 % Striche bekommt, sind diese Befehle da. Damit kann man nicht die
