In jedem metrischen Raum gilt präkompakt => beschränkt
git-svn-id: https://svn.lug-jena.de/uni-skripte@1417 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -1237,9 +1237,9 @@ r>0\colon K_{r}(x)\subset U$.
   \begin{enumerate}
    \item Eine Teilmenge $A$ ist \gdw{\highl{kompakt}} sie präkompakt und
     abgeschlossen ist.
-   \item Wenn eine Teilmenge $A\subset\K^{n}$ präkompakt ist, dann sie auch
+   \item Wenn eine Teilmenge eines metrischen Raums präkompakt ist, dann sie
+    auch
     beschränkt. (vgl. \autoref{bem:kompakt})
-    \help{Ist $\K^{n}$ hier notwendig?}
   \end{enumerate}
 \end{folger}
 
