Beschriftung für die selbstdefinierten Operatoren
git-svn-id: https://svn.lug-jena.de/uni-skripte@1436 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-hoehere-ana/skript.latex
+++ b/schmeisser-hoehere-ana/skript.latex
@@ -235,14 +235,14 @@
 % hier entfettet die Punkte einer description
 \renewcommand*{\descriptionlabel}[1]{\hspace\labelsep\normalfont #1}
 
-\DeclareMathOperator{\Span}{span}
-\DeclareMathOperator{\id}{id}
-\DeclareMathOperator{\dist}{dist}
-\DeclareMathOperator*{\supp}{supp}
-\DeclareMathOperator*{\esssup}{ess\,sup}
-\DeclareMathOperator*{\card}{card}
-\DeclareMathOperator{\codim}{codim}
-\DeclareMathOperator{\ind}{ind}
+\DeclareMathOperator{\Span}{span}           % lineare Hülle/Spann
+\DeclareMathOperator{\id}{id}               % Identität
+\DeclareMathOperator*{\dist}{dist}          % Abstand/Distanz
+\DeclareMathOperator*{\supp}{supp}          % Träger/support
+\DeclareMathOperator*{\esssup}{ess\,sup}    % essesntielles Supremum
+\DeclareMathOperator{\card}{card}           % Mächtigkeit einer Menge
+\DeclareMathOperator{\codim}{codim}         % Dimension des Komplementärraums
+\DeclareMathOperator{\ind}{ind}             % Index eines Fredholmoperators
 
 % http://www.tug.org/TUGboat/Articles/tb18-1/tb54becc.pdf
 \newcommand*{\ez}{\mathrm{e}}               % eulersche Zahl
