--- a/vorlage/skript.ltx
+++ b/vorlage/skript.ltx
@@ -5,7 +5,6 @@
 % rubber: watch $base.thm
 % rubber: makeidx.tool      xindy
 % rubber: makeidx.language  german-din
-% rubber: makeidx.modules   indexstyle.xdy
 %
 % scrreprt trifft am Besten die Bedürfnisse eines Skripts, das ganze wird
 % zweiseitig (twoside), d.h. es wird zwischen linker und rechter Seite
@@ -139,9 +138,8 @@
   \ifthenelse{\equal{#1}{}}{\index{#2}}{\index{#1}}%
 }
 
-% Definition für Xindy für die Trennung der einzelnen Abschnitte im
-% Index. siehe auch die Datei indexstyle.xdy
-\newcommand*{\indexsection}{\minisec}
+% Befehl für die Darstellung der Gliederungsüberschriften im Index
+\newcommand*{\lettergroup}[1]{\minisec{#1}}
 
 % Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
 \newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
