--- a/alt-linopt/skript.latex
+++ b/alt-linopt/skript.latex
@@ -5,7 +5,6 @@
 % rubber: watch $base.thm
 % rubber: makeidx.tool      xindy
 % rubber: makeidx.language  german-din
-% rubber: makeidx.modules   indexstyle.xdy
 
 \RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf veraltete
                    % Befehle oder solche, die man nicht in LaTeX verwenden
@@ -132,9 +131,8 @@
   \ifthenelse{\equal{#1}{}}{\index{#2}}{\index{#1}}%
 }
 
-% Definition für Xindy für die Trennung der einzelnen Abschnitte im
-% Index. siehe auch die Datei indexstyle.xdy
-\newcommand*{\indexsection}{\minisec}
+% Befehl für die Darstellung der Gliederungsüberschriften im Index
+\newcommand*{\lettergroup}[1]{\minisec{#1}}
 
 % Für Leute, die nicht gern o.\,B.\,d.\,A. jedesmal eintippen wollen
 \newcommand*{\obda}{o.\,B.\,d.\,A.\xspace}
