Umstellung auf Xindy 2.3
Mit der neuen Version wird der Befehl \lettergroup für die Überschriften
im Index verwendet. Daher können wir diesen (statt vorher \indexsection)
einfach als Alias von \minisec definieren und brauchen auch nicht mehr
die Datei indexstyle.xdy um \indexsection einzurichten.


git-svn-id: https://svn.lug-jena.de/uni-skripte@1455 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hecker-parallel/skript.latex
+++ b/hecker-parallel/skript.latex
@@ -12,7 +12,6 @@
 % rubber: watch $base.thm
 % rubber: makeidx.tool      xindy
 % rubber: makeidx.language  german-din
-% rubber: makeidx.modules   indexstyle.xdy
 
 \RequirePackage[l2tabu,orthodox]{nag}  % nag überprüft den Text auf verältete Befehle
                           % oder solche, die man nicht in LaTeX verwenden
@@ -135,9 +134,8 @@
 
 \renewcommand*{\tilde}[1]{\widetilde{#1}}  % die normale Schlange ist recht klein
 
-% Definition für Xindy für die Trennung der einzelnen Abschnitte im
-% Index. siehe auch die Datei indexstyle.xdy
-\newcommand*{\indexsection}{\minisec}
+% Befehl für die Darstellung der Gliederungsüberschriften im Index
+\newcommand*{\lettergroup}[1]{\minisec{#1}}
 
 \makeindex
 
