--- a/kuelshammer-algebra1/skript.latex
+++ b/kuelshammer-algebra1/skript.latex
@@ -5,7 +5,6 @@
 % rubber: watch $base.thm
 % rubber: makeidx.tool      xindy
 % rubber: makeidx.language  german-din
-% rubber: makeidx.modules   indexstyle.xdy
 %
 % scrreprt trifft am Besten die Bedürfnisse eines Skripts, das ganze wird
 % zweiseitig (twoside), d.h. es wird zwischen linker und rechter Seite
@@ -113,9 +112,8 @@
 
 \pagestyle{headings}
 
-% Definition für Xindy für die Trennung der einzelnen Abschnitte im
-% Index. siehe auch die Datei indexstyle.xdy
-\newcommand*{\indexsection}{\minisec}
+% Befehl für die Darstellung der Gliederungsüberschriften im Index
+\newcommand*{\lettergroup}[1]{\minisec{#1}}
 
 \newcommand*{\R}{\mathbb{R}}
 \newcommand*{\C}{\mathbb{C}}
