--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -40,7 +40,6 @@
 % rubber: watch $base.thm
 % rubber: makeidx.tool      xindy
 % rubber: makeidx.language  german-din
-% rubber: makeidx.modules   indexstyle.xdy
 
 % scrreprt trifft am Besten die Bedürfnisse eines Skripts, das ganze wird
 % zweiseitig (twoside), d.h. es wird zwischen linker und rechter Seite
@@ -209,9 +208,8 @@
 }
 \makeatother
 
-% Definition für Xindy für die Trennung der einzelnen Abschnitte im
-% Index. siehe auch die Datei indexstyle.xdy
-\newcommand*{\indexsection}{\minisec}
+% Befehl für die Darstellung der Gliederungsüberschriften im Index
+\newcommand*{\lettergroup}[1]{\minisec{#1}}
 
 % Diese Befehle sind dafür gedacht, dass die Symbole für "genau dann wenn"
 % im ganzen Dokument gleich aussehen. Außerdem erlaubt es eine schnelle
